--- a/Resume/bio.html
+++ b/Resume/bio.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Abhishek Kini - Bio-data and Personal Information">
-    <title>Bio-data - Abhishek Kini</title>
+    <meta name="description" content="Deepa D Prabhu - Bio-data and Personal Information">
+    <title>Bio-data - Deepa D Prabhu</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -50,17 +50,17 @@
                     <div class="profile-status"></div>
                 </div>
                 <div class="profile-info">
-                    <h1 class="profile-name">Abhishek Kini</h1>
-                    <p class="profile-tagline">Creative Developer & Designer</p>
+                    <h1 class="profile-name">Deepa D Prabhu</h1>
+                    <p class="profile-tagline">Computer Science Engineering Student & Aspiring Full Stack Developer</p>
                     <div class="social-links">
-                        <a href="https://www.linkedin.com/in/abhishek-kini-181669287/" class="social-link"
+                        <a href="https://www.linkedin.com/in/deepa-d-prabhu-24/" class="social-link"
                             aria-label="LinkedIn" target="_blank">
                             <svg width="20" height="20" viewBox="0 0 20 20" fill="currentColor">
                                 <path
                                     d="M17.04 17.043h-2.962v-4.64c0-1.107-.02-2.53-1.542-2.53-1.543 0-1.78 1.204-1.78 2.449v4.722H7.793V7.5h2.844v1.3h.04c.396-.75 1.364-1.54 2.808-1.54 3.003 0 3.556 1.977 3.556 4.547v5.236zM4.447 6.194c-.954 0-1.72-.776-1.72-1.73 0-.955.766-1.73 1.72-1.73.95 0 1.72.775 1.72 1.73 0 .954-.77 1.73-1.72 1.73zm1.48 10.85h-2.96V7.5h2.96v9.543zM18.522 0H1.476C.66 0 0 .645 0 1.44v17.12C0 19.355.66 20 1.476 20h17.042c.815 0 1.482-.645 1.482-1.44V1.44C20 .645 19.333 0 18.518 0h.003z" />
                             </svg>
                         </a>
-                        <a href="https://github.com/heynameisabhi" class="social-link" aria-label="GitHub"
+                        <a href="https://github.com/DEEPAcs034" class="social-link" aria-label="GitHub"
                             target="_blank">
                             <svg width="20" height="20" viewBox="0 0 20 20" fill="currentColor">
                                 <path
@@ -92,11 +92,11 @@
                     <div class="info-grid">
                         <div class="info-card">
                             <label class="info-label">Full Name</label>
-                            <p class="info-value">Abhishek Kini</p>
+                            <p class="info-value">Deepa D Prabhu</p>
                         </div>
                         <div class="info-card">
-                            <label class="info-label">Birth Year</label>
-                            <p class="info-value">2005</p>
+                            <label class="info-label">Phone</label>
+                            <p class="info-value">6361774399</p>
                         </div>
                         <div class="info-card">
                             <label class="info-label">Nationality</label>
@@ -120,19 +120,27 @@
                     <div class="info-grid">
                         <div class="info-card">
                             <label class="info-label">Email Address</label>
-                            <p class="info-value">abhishekkini.2005@gmail.com</p>
+                            <p class="info-value">deepa.23cs034@sode-edu.com</p>
                         </div>
                         <div class="info-card">
                             <label class="info-label">LinkedIn</label>
-                            <p class="info-value">linkedin.com/in/abhishek-kini-181669287</p>
+                            <p class="info-value">linkedin.com/in/deepa-d-prabhu-24</p>
                         </div>
                         <div class="info-card">
                             <label class="info-label">GitHub</label>
-                            <p class="info-value">github.com/heynameisabhi</p>
+                            <p class="info-value">github.com/DEEPAcs034</p>
+                        </div>
+                        <div class="info-card">
+                            <label class="info-label">HackerRank</label>
+                            <p class="info-value">deepa_23cs034</p>
+                        </div>
+                        <div class="info-card">
+                            <label class="info-label">LeetCode</label>
+                            <p class="info-value">DeepaDPrabhu</p>
                         </div>
                         <div class="info-card full-width">
                             <label class="info-label">Location</label>
-                            <p class="info-value">India</p>
+                            <p class="info-value">Kundapura, Karnataka, India</p>
                         </div>
                     </div>
                 </section>
@@ -153,24 +161,36 @@
                         <div class="academic-item">
                             <div class="academic-level">Bachelor's Degree</div>
                             <div class="academic-details">
-                                <h3>Bachelor of Science in Computer Science</h3>
-                                <p class="academic-institution">Engineering College</p>
+                                <h3>B.E. - Computer Science & Engineering</h3>
+                                <p class="academic-institution">SMVITM (Shri Madhwa Vadiraja Institute of Technology and Management)</p>
                                 <div class="academic-meta">
-                                    <span>2023 - Present</span>
+                                    <span>2024 - 2027</span>
                                     <span>•</span>
-                                    <span>Currently Pursuing</span>
+                                    <span>CGPA: 9.78/10</span>
                                 </div>
                             </div>
                         </div>
                         <div class="academic-item">
                             <div class="academic-level">12th Grade</div>
                             <div class="academic-details">
-                                <h3>Higher Secondary Education (Pre-University)</h3>
-                                <p class="academic-institution">Pre-University College</p>
+                                <h3>PUC - Science Stream</h3>
+                                <p class="academic-institution">RNS PU College, Kundapura - Karnataka State Board</p>
                                 <div class="academic-meta">
-                                    <span>2021 - 2023</span>
+                                    <span>2023</span>
                                     <span>•</span>
-                                    <span>Completed</span>
+                                    <span>Percentage: 94.3%</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="academic-item">
+                            <div class="academic-level">10th Grade</div>
+                            <div class="academic-details">
+                                <h3>SSLC</h3>
+                                <p class="academic-institution">VKR Acharya High School, Kundapura - Karnataka State Board</p>
+                                <div class="academic-meta">
+                                    <span>2020</span>
+                                    <span>•</span>
+                                    <span>Percentage: 95%</span>
                                 </div>
                             </div>
                         </div>
@@ -192,28 +212,20 @@
                     </h2>
                     <div class="info-grid">
                         <div class="info-card">
-                            <label class="info-label">Frontend Development</label>
-                            <p class="info-value">HTML5, CSS3, JavaScript, Progressive Web Apps</p>
+                            <label class="info-label">Programming Languages</label>
+                            <p class="info-value">Java, Python, C, JavaScript</p>
                         </div>
                         <div class="info-card">
-                            <label class="info-label">Backend Development</label>
-                            <p class="info-value">Java, Spring Boot, C Programming</p>
-                        </div>
-                        <div class="info-card">
-                            <label class="info-label">Database Management</label>
-                            <p class="info-value">PostgreSQL, MySQL</p>
+                            <label class="info-label">Web Technologies</label>
+                            <p class="info-value">HTML, CSS, MySQL</p>
                         </div>
                         <div class="info-card">
                             <label class="info-label">Mobile Development</label>
-                            <p class="info-value">Flutter</p>
+                            <p class="info-value">Learning Flutter 2</p>
                         </div>
                         <div class="info-card">
-                            <label class="info-label">UI/UX Design</label>
-                            <p class="info-value">Figma, Canva, Prototyping, Photogrammetry</p>
-                        </div>
-                        <div class="info-card">
-                            <label class="info-label">Tools & Others</label>
-                            <p class="info-value">Git, GitHub, Machine Learning Fundamentals</p>
+                            <label class="info-label">Frameworks & Tools</label>
+                            <p class="info-value">Spring Boot (Foundational), Data Structures & Algorithms</p>
                         </div>
                     </div>
                 </section>
@@ -240,8 +252,8 @@
                                     <polyline points="8 6 2 12 8 18" />
                                 </svg>
                             </div>
-                            <h4>Web Development</h4>
-                            <p>Building web and mobile applications</p>
+                            <h4>Full Stack Development</h4>
+                            <p>Building comprehensive web applications</p>
                         </div>
                         <div class="hobby-card">
                             <div class="hobby-icon">
@@ -251,8 +263,8 @@
                                     <path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71" />
                                 </svg>
                             </div>
-                            <h4>UI/UX Design</h4>
-                            <p>Creating beautiful user interfaces in Figma</p>
+                            <h4>Event Organization</h4>
+                            <p>Organizing college fests and technical events</p>
                         </div>
                         <div class="hobby-card">
                             <div class="hobby-icon">
@@ -262,8 +274,8 @@
                                     <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z" />
                                 </svg>
                             </div>
-                            <h4>Learning</h4>
-                            <p>Exploring new technologies and frameworks</p>
+                            <h4>Leadership & NCC</h4>
+                            <p>NCC 'A' Grade Certificate holder</p>
                         </div>
                         <div class="hobby-card">
                             <div class="hobby-icon">
@@ -274,8 +286,8 @@
                                     <polyline points="17 11 19 13 23 9" />
                                 </svg>
                             </div>
-                            <h4>Open Source</h4>
-                            <p>Contributing to community projects</p>
+                            <h4>Technical Training</h4>
+                            <p>Participating in workshops and exhibitions</p>
                         </div>
                         <div class="hobby-card">
                             <div class="hobby-icon">
@@ -286,8 +298,8 @@
                                     <circle cx="12" cy="13" r="4" />
                                 </svg>
                             </div>
-                            <h4>Photogrammetry</h4>
-                            <p>3D scanning and modeling</p>
+                            <h4>Problem Solving</h4>
+                            <p>Data Structures & Algorithms in C</p>
                         </div>
                         <div class="hobby-card">
                             <div class="hobby-icon">
@@ -297,8 +309,8 @@
                                     <polyline points="17 2 12 7 7 2" />
                                 </svg>
                             </div>
-                            <h4>Technology</h4>
-                            <p>Staying updated with tech trends</p>
+                            <h4>Learning</h4>
+                            <p>Continuously exploring new technologies</p>
                         </div>
                     </div>
                 </section>
@@ -319,25 +331,21 @@
                     <div class="additional-info">
                         <div class="info-block">
                             <h4>Career Objectives</h4>
-                            <p>Passionate about creating beautiful and functional digital experiences. Seeking
-                                opportunities to leverage my expertise in web development, mobile app development, and
-                                UI/UX design to build innovative solutions that make a positive impact. Eager to
-                                contribute to open-source projects and share knowledge with the developer community.</p>
+                            <p>A highly motivated and adaptable 3rd-year Computer Science Engineering student committed to learning and growth. Aiming to become a Full Stack Developer, I am eager to apply my academic foundation, contribute through hands-on projects, and quickly master new technologies in a collaborative team environment.</p>
                         </div>
                         <div class="info-block">
-                            <h4>Strengths</h4>
+                            <h4>Strengths & Leadership</h4>
                             <ul class="strengths-list">
-                                <li>Strong problem-solving and creative thinking</li>
+                                <li>Strong problem-solving and analytical thinking</li>
                                 <li>Quick learner with passion for new technologies</li>
-                                <li>Excellent design sense and attention to detail</li>
-                                <li>Good collaboration and communication skills</li>
+                                <li>Event organization and leadership skills</li>
+                                <li>NCC 'A' Grade Certificate - discipline and teamwork</li>
+                                <li>Excellent academic performance (CGPA: 9.78/10)</li>
                             </ul>
                         </div>
                         <div class="info-block">
-                            <h4>Projects</h4>
-                            <p>Created multiple UI/UX designs using Figma including JanaTattva Library Management
-                                System, Simple Animal Rescue App, and IEEE Branch Communication Web UI. Always exploring
-                                and building new projects to enhance skills and contribute to the developer community.
+                            <h4>Projects & Experience</h4>
+                            <p>Developed Smart College Assistant - a comprehensive web application for managing student, teacher, and admin interactions using HTML, CSS, JavaScript, MySQL, and Spring Boot. Participated in workshops and mini-project exhibitions at SMVITM, continuously building projects to enhance full-stack development skills.
                             </p>
                         </div>
                     </div>
@@ -354,7 +362,7 @@
                     <span class="logo-text">Portfolio</span>
                     <span class="logo-dot">.</span>
                 </div>
-                <p class="footer-text">© 2025 Abhishek Kini. All rights reserved.</p>
+                <p class="footer-text">© 2025 Deepa D Prabhu. All rights reserved.</p>
                 <div class="footer-links">
                     <a href="index.html">Home</a>
                     <a href="resume.html">Resume</a>
